<resources>
    <string name="app_name">flashcard design</string>

    <string name="section_name">FLASHCARDS</string>
    <string name="term_text">Term</string>
    <string name="definition_text">Definition</string>
    <string name="option_text">\t\tList</string>
    <string name="option_text2">Tt \t  Font</string>
    <string name="option_text3">Alignment</string>

    <string name="Title_text">Title</string>
    <string name="flip_text">Tap to flip</string>
    <string name="tag_text">Tag</string>

    <string name="tag_text2">View Tags</string>

    <string name="app_name2">STUDIFY</string>
    <string name="category">CATEGORIES</string>
    <string name="bottom_nav_text">Home</string>
    <string name="bottom_nav_text2">Category</string>
    <string name="bottom_nav_text3">Create</string>
    <string name="bottom_nav_text4">My Flashcards</string>
    <string name="bottom_nav_text5">Profile</string>
    <string name="search_text">Search for flashcards</string>
    <string name="category_topic">Information Management</string>
    <string name="category_topic2">History</string>
    <string name="category_topic3">Operating Systems</string>
    <string name="category_topic4">Mathematics</string>
    <string name="category_topic5">Programming Languages</string>
    <string name="category_topic6">Technology</string>
    <string name="category_topic7">Coding</string>
    <string name="category_topic8">Science</string>
    <string name="category_text1">Organize and retrieve data efficiently</string>
    <string name="category_text2">Uncover past events and cultures</string>
    <string name="category_text3">Manage computer hardware and software</string>
    <string name="category_text4">Solve problems with numbers and patterns</string>
    <string name="category_text5">Create software with diverse languages</string>
    <string name="category_text6">Discover innovations shaping our world</string>
    <string name="category_text7">Instruct computers with algorithms</string>
    <string name="category_text8">Explore natural laws and phenomena</string>

    <string name="username_text">Username</string>
    <string name="password_text">Password</string>
    <string name="login_text">Login</string>
    <string name="forgetpassword_text">Forget Password?</string>
    <string name="facebookLogin_text">Continue with Facebook</string>
    <string name="googleLogin_text">Continue with Google</string>
    <string name="emailAddress_text">Email Address</string>

    <string name="student_text">Student</string>
    <string name="sinstructor_text">Instructor</string>
    <string name="signup_text">Sign Up</string>

    <string name="it_text">Information Technology</string>
    <string name="itdesc_text">Understanding different Programming Languages</string>
    <string name="db_text">Database \nManagement</string>
    <string name="dbdesc_text">Optimization and Security</string>
    <string name="app_text">Mobile \nApplication \nDevelopment</string>
    <string name="appdesc_text">Guide to Creating Apps for Android and iOS Platforms</string>
    <string name="cloud_text">Cloud \nComputing</string>
    <string name="clouddesc_text"> Maximizing Cloud Services for Modern Computing</string>
    <string name="game_text">Game \nDevelopment</string>
    <string name="gamedesc_text">A Deep Dive into the World of Interactive Entertainment</string>
    <string name="inthings_text">Internet of \nThings (IoT)</string>
    <string name="inthings_desc">Connecting the World through Smart Devices</string>

    <string name="home_text">Home</string>
    <string name="category_text">Category</string>
    <string name="add_text">Create</string>
    <string name="flashcards_text">My Flashcards</string>
    <string name="profile_text">Profile</string>

    <string name="create_text">Create</string>
    <string name="settings_text">Settings</string>

    <string name="science_text">SCIENCE</string>
    <string name="itelective_text">IT ELECTIVE</string>
    <string name="technology_text">TECHNOLOGY</string>
    <string name="os_text">OPERATING SYSTEMS</string>
    <string name="math_text">MATHEMATICS</string>
    <string name="im2_text">IM 2</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>

    <string name="about_us"> About Us</string>
    <string name="about_us_message">
        Welcome to our Studify! We are a team of passionate developers studying in the BSIT program, committed to creating a seamless and effective learning experience for you.

        <big><b>\n\nOur Mission:</b></big>

        \n  Our mission is to empower learners like you with a tool that makes studying enjoyable and efficient. We believe in the power of technology to enhance education, and we strive to leverage it to make learning accessible to all.

        <big><b>\n\nFeatures:</b></big>

        \n- <b>Customizable Flashcards:</b> Tailor your study materials to suit your learning style.
        \n- <b>User-Friendly Interface:</b>  Intuitive design for effortless navigation.
        \n- <b>Progress Tracking:</b>  Keep track of your learning journey and monitor your progress over time.
        \n- <b>Seamless Integration:</b>  Sync your data across devices for uninterrupted study sessions.

        <big><b>\n\nContact Us:</b></big>
        \nHave feedback, suggestions, or questions? We\u0027d love to hear from you! Feel free to reach out to us at studify@gmail.com.

        \n\nThank you for choosing our app to support your learning endeavors. We\u0027re dedicated to continuously improving and providing you with the best possible study experience.

        \n\nHappy learning!

        <big><b>\n\nDevelopers:</b></big>
        \n- Paul Garren Santiago
        \n- Maegan Rose Gabuyo
        \n- Justin Louie Arangorin
    </string>
    <string name="introduction_to_kotlin">Introduction to kotlin</string>
    <string name="title_activity_my_flashcards">MyFlashcards</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="my_flashcards">My Flashcards</string>
    <string name="my_flaschcard_title">Introduction to Kotlin</string>


    <string name="flashcard_title">ADVANCED TECHNOLOGY TERMS</string>
    <string name="rate_message">Rate your experience and help us improve!</string>
    <string name="submit">Submit</string>
    <string name="flashcard_options">FLASHCARD OPTIONS</string>
    <string name="privacy">PRIVACY</string>
    <string name="who_can_edit">Who can edit?</string>
    <string name="who_can_view">Who can view?</string>
    <string name="share_flashcard"><u>Share Flashcard</u></string>
    <string name="see_ratings">See Ratings</string>
    <string name="delete_flashcard">Delete Flashcard</string>
    <string name="profile">Profile</string>
    <string name="username">Username</string>
    <string name="example_email">example@gmail.com</string>
    <string name="total_flashcard">Total Flashcards</string>
    <string name="time_of_studying">Time of studying</string>
    <string name="accuracy">Accuracy</string>
    <string name="rating">Rating</string>
    <string name="tag">TAG</string>
    <string name="color">Color</string>
    <string name="tag_description">TAG DESCRIPTION</string>
    <string name="add">ADD</string>
    <string name="exit">exit</string>
    <string name="my_flashcards1">MY FLASHCARDS</string>
    <string name="advanced_technology_term">Advanced Technology Terms</string>
    <string name="mobile_technology">Mobile Technology</string>
    <string name="programming_languages">Programming Languages</string>
    <string name="logout">Logout</string>
    <string name="done">Done</string>
    <string name="welcome_to_studify">Welcome to Studify!</string>
</resources>